# ChemVista

./: README.md  pyproject.toml  setup.py
chemvista/: __init__.py  cli.py  main_window.py  render_settings.py  renderer.py  renderer_settings.json  scene_manager.py  scene_objects.py  tree_structure.py  utils.py
chemvista/gui/: __init__.py  main_window.py  qt_utils.py  scene.py
chemvista/gui/resources/: icons.qrc  icons_rc.py
chemvista/gui/widgets/: __init__.py  item_widgets.py  object_tree.py  settings_dialog.py
chemvista/gui/widgets/object_tree/: __init__.py  item_widgets.py  object_tree_widget.py
chemvista/renderer/: __init__.py  base.py  molecule.py  render_settings.py  scalar_field.py
chemvista/resources/: compile.py  icons.qrc  icons_rc.py
chemvista/widgets/: __init__.py  item_widgets.py  object_list.py  settings_dialog.py
examples/: gui_start.py  scene_manager_usage.py
tests/: conftest.py  test_cli.py  test_file_loading.py  test_gui.py  test_scene_manager.py  test_scene_objects.py  test_settings.py  test_tree_structure.py
tests/data/: mpf_motor_trajectroy.xyz
