[tool.poetry]
name = "ChemVista"
version = "0.1.0"
description = ""
authors = ["ivan <imtambovcev@gmail.com>"]
readme = "README.md"
packages = [{include = "chemvista"}]

[tool.poetry.dependencies]
python = "^3.10"
ase = "^3.22.1"
matplotlib = "^3.7.1"
pyvista = "^0.38.5"
networkx = "^3.0"
pathlib = "^1.0.1"
numpy = "^1.0"
pandas = "^2.1.0"
yattag = "^1.15.1"
pyperclip = "^1.8.2"
ipython = "^8.15.0"
rdkit = "^2023.3.3"
scikit-learn = "^1.3.0"
cclib = "^1.8"
scipy = "^1.11.2"
nx-ase = {git = "https://github.com/imtambovtcev/nx_ase.git"}
pyqt5 = "^5.15.11"
pyvistaqt = "^0.11.2"
vtk = "<9.4.0"

[tool.poetry.extras]
qt = ["PyQt5", "pyvistaqt"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
pytest-cov = "^4.1.0"
ipykernel = "^6.25.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-qt = "^4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chemvista = "chemvista.cli:main"
